syntax = "proto3";
package com.handcontrol.server.protobuf;

service HandleRequest{
  rpc login(LoginRequest) returns (LoginResponse);
  rpc proRequest(ClientRequest) returns (ClientResponse);
  rpc registry(LoginRequest) returns (LoginResponse);
  rpc proUpdate(SubscribeRequest) returns (stream ProStatus);
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ClientRequest {
  string request = 1;
}

message ClientResponse {
  string message = 1;
}

message SubscribeRequest {
  string message = 1;
}

message ProStatus {
  string status = 1;
}
